<resources>
    <string name="app_name">GrizzFinder</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_session">Session</string>
    <string name="major">Major:</string>
    <string name="name">Name:</string>
    <string name="motto">Motto:</string>
    <string name="place_to_find_me_most">Place to find me most:</string>
    <string name="description">Description:</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="invite">Invite</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your Name</string>
    <string name="your_major">Your Major</string>
    <string name="your_words_to_live_by">Your words to live by</string>
    <string name="type_here">Type here</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="fill_in">Fill in</string>
    <string name="title_activity_profile02">Profile02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
