<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:background="#808080"
        android:textColor="#FFFF"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id = "@+id/name"
        android:text = "@string/your_name"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart ="130dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart ="25dp"
        android:layout_marginTop="150dp"
        android:background="#808080"
        android:textColor="#FFFF"
        android:text="@string/major"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id = "@+id/major"
        android:text = "@string/your_major"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart ="130dp"
        android:layout_marginTop="150dp"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart ="25dp"
        android:layout_marginTop="200dp"
        android:background="#808080"
        android:textColor="#FFFF"
        android:text="@string/motto"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id = "@+id/motto"
        android:text = "@string/your_words_to_live_by"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart ="130dp"
        android:layout_marginTop="200dp"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart ="25dp"
        android:layout_marginTop="325dp"
        android:background="#808080"
        android:textColor="#FFFF"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id = "@+id/description"
        android:text = "@string/fill_in"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="375dp"
        android:background="#FFFFFF"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart = "290dp"
        android:layout_marginTop = "560dp"
        android:text = "@string/change" />


</RelativeLayout>