<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/button"
            android:layout_width = "200dp"
            android:layout_height = "wrap_content"
            android:layout_marginStart = "100dp"
            android:layout_marginTop = "200dp"
            android:text="@string/create" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart = "100dp"
            android:layout_marginTop = "50dp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart = "100dp"
            android:layout_marginTop = "50dp"
            android:text="@string/invite" />
    </LinearLayout>
</RelativeLayout>