<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_schedule">

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.gfnavbaractivity.ui.home.HomeFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/schedule" >
        <action
            android:id="@+id/action_navigation_schedule_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_schedule_to_navigation_map"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_schedule_to_navigation_session"
            app:destination="@id/navigation_session" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.gfnavbaractivity.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_schedule"
            app:destination="@id/navigation_schedule" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_session"
            app:destination="@id/navigation_session" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_map"
            app:destination="@id/navigation_map" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.gfnavbaractivity.ui.notifications.NotificationsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/map" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_schedule"
            app:destination="@id/navigation_schedule" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_map_to_navigation_session"
            app:destination="@id/navigation_session" />
    </fragment>

    <fragment
        android:id="@+id/navigation_session"
        android:name="com.example.gfnavbaractivity.ui.notifications.NotificationsFragment"
        android:label="@string/title_session"
        tools:layout="@layout/session" >
        <action
            android:id="@+id/action_navigation_session_to_navigation_map"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_session_to_navigation_schedule"
            app:destination="@id/navigation_schedule" />
        <action
            android:id="@+id/action_navigation_session_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>